--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -7,7 +7,9 @@
     font-family: 'Roboto', sans-serif;
 }
 
-
+body {
+    background-color: #262626;
+}
 
 /*
 ==============================================
