--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,14 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
+/*
+================= HEADER =================
+*/
 
-*, *::after, *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-}
+
+
+
+
+/*=== INTRO ===*/
+
+
+
+
+
+
+/*=== FILMES MAIS VISTOS ===*/
+
+
+
+
+
+
+
+/*=== FAQ ===*/
+
+
+
 
 
 
 /*
-==============================================
+================= FOOTER =================
 */
