--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,14 +1,105 @@
+body {
+    position: relative;
+}
+
+
 /*
 ================= HEADER =================
 */
 
+header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    width: 100%;
+    /* height: 83px; */
+    background-color: rgb(0 0 0 / 64%);
+    /* background-image: linear-gradient(to top, rgb(0 0 0 / 0%), rgb(0 0 0 / 56%)); */
+}
 
+header nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
+    height: 83px;
+    padding: 0 1.438rem;
+}
 
+header nav > a {
+    display: flex;
+    align-items: center;
+
+    font-size: 2.25rem;
+    color: white;
+    text-decoration: none;
+    
+    height: 100%;
+    padding: 0 0.625rem;
+}
+
+header nav > a:hover {
+    color: white;
+    background-color: #41AF62;
+    /* text-decoration: underline; */
+}
+
+header nav > a:active {
+    background-color: #287a41;
+}
+
+/* header nav > a:visited {
+    color: rgb(223, 223, 223);
+} */
+
+header nav > div {
+    display: flex;
+    align-items: center;
+}
+
+header nav > div #searchBtn {
+    height: 49px;
+    width: 79px;
+
+    /* padding: 0.281rem 0.5rem; */
+    margin-right: 1.438rem;
+    border-radius: 5px;
+    text-align: center;
+
+    background-color: #41AF62;
+
+}
+
+header nav > div #searchBtn img {
+    object-fit: contain;
+    width: 38%;
+    height: 100%;
+}
 
 /*=== INTRO ===*/
 
 
+#content #intro {
+    width: 100%;
+    height: 100vh;
+    background-image: url(../img/bg/bg-filme4.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+
+
+
+
+/*
+================= CONTENT =================
+*/
 
 
 
