--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -14,7 +14,7 @@ header {
     z-index: 3;
     width: 100%;
     /* height: 83px; */
-    background-color: rgb(0 0 0 / 64%);
+    background-color: rgba(0, 0, 0, 0.3);
     /* background-image: linear-gradient(to top, rgb(0 0 0 / 0%), rgb(0 0 0 / 56%)); */
 }
 
