--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -4,6 +4,16 @@
 ================= HEADER =================
 */
 
+header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    width: 100%;
+    /* height: 83px; */
+    /* background-image: linear-gradient(to top, rgb(0 0 0 / 0%), rgb(0 0 0 / 56%)); */
+}
+
 header nav > a:hover {
     color: white;
     background-color: var(--greenBtn);
@@ -80,7 +90,7 @@ header nav > div button:hover {
     flex-direction: column;
 }
 
-#content #intro div {
+#content #intro > div {
     width: 90%;
     max-width: 704px;
     text-align: center;
@@ -89,19 +99,19 @@ header nav > div button:hover {
 #content #intro div h1 {
     font-size: 3.125rem;
     font-weight: bold;
-    text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.74);
+    text-shadow: 3px 3px 4px var(--bgDark2);
     margin-bottom: 1.25rem;
 }
 
 #content #intro div > p {
     font-size: 1.625rem;
-    text-shadow: 3px 3px 4px rgb(0 0 0 / 74%);
+    text-shadow: 3px 3px 4px var(--bgDark2);
     margin-bottom: 3.313rem;
 }
 
 #content #intro div #formIntro p {
     font-size: 1.125rem;
-    text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.74);
+    text-shadow: 3px 3px 4px var(--bgDark2);
     margin-bottom: 0.625rem;
 }
 
