--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,44 +1,22 @@
-html{
+html, body{
     width: 100%;
     height: 100%;
 }
 
 body{
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+
+    background-image: url(../img/bg/clipartBg1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 
 /*
 ================= HEADER =================
 */
-
-header {
-    background-color: rgba(0, 0, 0, 0.3);
-}
-
-header nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    height: 83px;
-    padding: 0 1.438rem;
-}
-
-header nav > a {
-    display: flex;
-    align-items: center;
-
-    font-size: 2.25rem;
-    color: white;
-    text-decoration: none;
-    
-    height: 100%;
-    padding: 0 0.625rem;
-}
 
 header nav > a:hover {
     color: white;
@@ -53,3 +31,40 @@ header nav > a:active {
 /* header nav > a:visited {
     color: rgb(223, 223, 223);
 } */
+
+
+/*
+================= CONTENT =================
+*/
+
+
+/*=== MAIN ===*/
+
+#loginContent main {
+    max-width: 580px;
+    width: 90%;
+    margin: 0 auto;
+
+    text-align: center;
+    background-color: var(--bgDark3);
+    border-radius: 0.375rem;
+}
+
+#loginContent main #formLogin {
+    width: 80%;
+    max-width: 302px;
+    margin: 0 auto;
+}
+
+#loginContent main #formLogin #inputField {
+    display: flex;
+    flex-direction: column;
+}
+
+#loginContent main #formLogin #inputField label {
+    align-self: flex-start;
+}
+
+#loginContent main #formLogin #inputField {
+    width: 100%;
+}
