--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -40,18 +40,27 @@ header nav > a:active {
 
 /*=== MAIN ===*/
 
+#loginContent {
+    margin: 3.75rem 0;
+}
+
 #loginContent main {
     max-width: 580px;
     width: 90%;
     margin: 0 auto;
+    padding: 1.125rem 0.188rem 1rem;
 
     text-align: center;
     background-color: var(--bgDark3);
     border-radius: 0.375rem;
 }
 
+#loginContent main h1 {
+    font-size: 2rem;
+}
+
 #loginContent main #formLogin {
-    width: 80%;
+    width: 85%;
     max-width: 302px;
     margin: 0 auto;
 }
@@ -61,10 +70,106 @@ header nav > a:active {
     flex-direction: column;
 }
 
-#loginContent main #formLogin #inputField label {
-    align-self: flex-start;
+#loginContent main #formLogin #inputField:first-child {
+    margin-bottom: 1rem;
 }
 
-#loginContent main #formLogin #inputField {
+#loginContent main #formLogin #inputField:nth-child(2) {
+    margin-bottom: 3.125rem;
+}
+
+#loginContent main #formLogin #inputField label {
+    align-self: flex-start;
+    font-size: 1rem;
+    margin-bottom: 0.625rem;
+}
+
+#loginContent main #formLogin #inputField input {
+    height: 37px;
+    border-radius: 0.313rem;
+    padding-left: 0.625rem;
+
+    border: none;
+    overflow: auto;
+    outline: none;
+}
+
+#loginContent main #formLogin button{
     width: 100%;
+    height: 44px;
+    border-radius: 0.313rem;
+    margin-bottom: 0.75rem;
+
+    font-size: 1.25rem;
+    font-weight: bold;
+    color: white;
+    background-color: var(--greenBtn);
+    cursor: pointer;
+
+    border: none;
+    overflow: auto;
+    outline: none;
+}
+
+#loginContent main > a {
+    text-decoration: none;
+    color: white;
+}
+
+#loginContent main p {
+    margin: 1.438rem 0 0 0;
+}
+
+#loginContent main p a {
+    text-decoration: none;
+    color: var(--greenBtn);
+}
+
+#loginContent main a:hover {
+    text-decoration: underline;
+    font-style: italic;
+}
+
+
+
+/*
+================= FOOTER =================
+*/
+
+footer {
+    background-color: var(--bgDark1);
+    text-align: center;
+}
+
+footer > p {
+    margin-top: 2.188rem;
+}
+
+footer ul {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    margin-bottom: 1.313rem;
+}
+
+footer ul a {
+    color: white;
+    text-decoration: none;
+}
+
+footer ul a:hover{
+    text-decoration: underline;
+    color: var(--greenBtn);
+}
+
+footer ul li:not(li:last-child) {
+    margin-right: 0.313rem;
+}
+
+footer ul p {
+    font-size: 0.813rem;
+    pointer-events: none;
+    margin-bottom: 0;
 }
