feito o @media para a página de login

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -18,6 +18,7 @@ body {
     --bgDark1: rgba(0, 0, 0, 0.3);
     --bgDark2: rgba(0, 0, 0, 0.74);
     --bgDark3: rgba(0, 0, 0, 0.28);
+    --hoverGreen1: #229043;
 
 }
 
