--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -138,6 +138,83 @@ header nav > div button:hover {
     background-color: var(--hoverGreen1);
 }
 
+@media (max-width: 360px) {
+
+    #content #intro div h1 {
+        font-size: 2.25rem !important;
+    }
+
+    header nav > a {
+        font-size: 1.25rem !important;
+    }
+}
+
+@media (max-width: 414px) {
+
+    #content #intro div h1{
+        margin-bottom: 0.875rem;
+    }
+
+    #content #intro div > p{
+        font-size: 1.125rem !important;
+    }
+
+    #content #intro div #formIntro p {
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 480px) {
+
+    #content #intro div h1{
+        font-size: 2.5rem !important;
+    }
+
+    header nav > div #searchBtn {
+        height: 35px !important;
+        width: 40px !important;
+    }
+
+    header nav > div #searchBtn img {
+        width: 55% !important;
+    }
+
+    header nav > div button {
+        width: 68px !important;
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 599px) {
+
+    header nav {
+        padding: 0 1.438rem 0 0.875rem !important;
+    }
+
+    header nav > a {
+        font-size: 1.625rem;
+        padding: 0 !important;
+    }
+
+    #content #intro div #formIntro fieldset {
+        flex-direction: column !important;
+        align-items: center !important;
+    }
+
+    #content #intro div #formIntro fieldset input {
+        border-radius: 0.313rem 0.313rem 0 0 !important;
+    }
+
+    #content #intro div #formIntro fieldset button {
+        border-radius: 0 0 0.313rem 0.313rem !important;
+        font-size: 1.375rem !important;
+        padding: 0.125rem;
+    }
+
+    #content #intro div #formIntro fieldset input, #content #intro div #formIntro fieldset button {
+        width: 76% !important;
+    }
+}
 
 
 
