--- a/assets/css/equipe.css
+++ b/assets/css/equipe.css
@@ -36,9 +36,6 @@ header nav > div {
     background-color: #262626;
     display: flex;
     justify-content: space-between;
-    /*justify-content: space-around;*/
-    /*align-content: center;*/
-    width: 1259px;
     height: 449px;
     margin: 60px auto;
 }
@@ -47,11 +44,11 @@ header nav > div {
     border-radius: 15px;
     text-align: center;
     padding: 20px 15px 30px;
-    background: #fff;
+    background: #000000;  /* mudei de branco pra preto */
 
 }
 .our-team .pic{
-    background: #fff;
+    background: #000000;   /*mudei de branco pra preto*/
     padding: 10px;
     margin-bottom: 25px;
     display: inline-block;
@@ -61,7 +58,8 @@ header nav > div {
     object-fit: cover;
 }
 .our-team:hover .pic{
-    background: #17bebb;
+    
+   /*0background: #17bebb;*/
     border-radius: 50%;
 }
 .pic img{
@@ -73,14 +71,16 @@ header nav > div {
 }
 .our-team .title{
     font-weight: 600;
-    color: #2e282a;
+    /*color: #2e282a;*/
+    color: white;
     text-transform: uppercase;
     display: block;
     font-size: 20px;
     margin: 0 0 7px 0;
 }
 .our-team .post{
-    color: #17bebb;
+   /* color: #17bebb; */
+    color: #41AF62;
     text-transform: capitalize;
     display: block;
     font-size: 15px;
@@ -97,28 +97,29 @@ header nav > div {
     margin-right: 5px;
 }
 .our-team .social li a{
-    border-radius: 50%;
-    font-size: 15px;
-    color: #17bebb;
-    border: 1px solid #17bebb;
     display: block;
     width: 30px;
     height: 30px;
     line-height: 30px;
+    border-radius: 50%;
+    font-size: 15px;
+    color: #41AF62;
+    border: 1px solid #41AF62;
     transition: all 0.5s ease 0s;
+
 }
 .our-team:hover .social li a{
-    background: #17bebb;
+    background-color: #41AF62;
+    /* background: #17bebb; */
     color: #fff;
 }
 .our-team:hover .pic{
-    background: #17bebb;
+    background-color: #41AF62;
+   /* background: #17bebb; */
     border-radius: 50%;
 }
-.our-team:hover .social li a{
-    background: #17bebb;
-    color: #fff;
+
+
+@media only screen and (max-width: 990px){
+    .our-team{ margin-bottom: 30px; }
 }
-
-
-@media (max-wid)
