--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -1,14 +1,24 @@
 .modal-dialog {
     color: white;
+    max-width: 960px;
+    padding: .5rem;
 }
 
 .modal-dialog .modal-content {
     background-color: #262626 !important;
+    padding: 1.25rem;
 }
 
 .modal-body {
     display: flex;
-    /* flex-wrap: wrap; */
+}
+
+.modal-header, .modal-body {
+    padding: 0;
+}
+
+.modal-header {
+    margin-bottom: 1.25rem;
 }
 
 
@@ -32,11 +42,23 @@
     padding: 0 0.938rem;
 }
 
+.modal-header button {
+    align-self: flex-start;
+    padding: 5px;
+    border: 0;
+    color: white;
+    background-color: transparent;
+}
+
 
 
 /*
 ================= BODY =================
 */
+
+.modal-body #filmeInfoModal {
+    margin-left: 1.25rem;
+}
 
 .modal-body #filmeInfoModal #filmeNotaModal {
     display: flex;
@@ -68,16 +90,69 @@
 }
 
 .modal-body #filmeInfoModal hr {
-    height: 3px;
+    height: 1px;
     border-color: white;
     background-color: white;
     opacity: 1;
     border-radius: 1.625rem;
-    margin: 0;
+    margin: 0 0 2.063rem 0;
+}
+
+.modal-body #filmeInfoModal #outrosFilmeModal p {
+    margin-bottom: 0.875rem !important;
+}
+
+.modal-body #filmeInfoModal #outrosFilmeModal p:last-child { 
+    /*Nao adianta fazer com :not na linha de cima, o <p> ainda sim pega a margin do bootstrap*/
+    margin-bottom: 0 !important;
 }
 
 
+@media (max-width: 411px) {
 
-/*
-================= FOOTER =================
-*/
+    .modal-body #filmeInfoModal #filmeNotaModal {
+        justify-content: center;
+    }
+
+    .modal-body #filmeInfoModal #filmeNotaModal div{
+        margin-bottom: 1.063rem;
+    }
+
+    .modal-body #filmeInfoModal #filmeNotaModal div:not(div:first-child) {
+        margin-right: 0;
+    }
+
+    .modal-body #filmeInfoModal #filmeSinopseModal {
+        margin-top: 0.188rem;
+    }
+
+    
+}
+
+@media (max-width: 414px) {
+
+    .modal-header #filmeTituloModal p:first-child {
+        font-size: 1.75rem;
+    }
+}
+
+
+@media (max-width: 699px) {
+
+    .modal-body {
+        flex-wrap: wrap;
+    }
+
+    .modal-body #filmePosterModal {
+        order: 1;
+        margin: 2.688rem auto 0;
+    }
+
+    .modal-body #filmePosterModal img {
+        width: 100%;
+    }
+
+    .modal-body #filmeInfoModal {
+        margin-left: 0 !important;
+    }
+}
