--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -70,6 +70,7 @@
     border: 1px solid var(--greenBtn);
     border-radius: 0.25rem;
     padding: 0.125rem 0.5rem;
+    text-align: center;
 }
 
 .modal-body #filmeInfoModal #filmeNotaModal div:not(div:last-child) {
