--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -1,3 +1,8 @@
+H1{
+    text-align: center;
+    margin:50px;
+}
+
 #carouselExampleControls{
     max-width: 1211px;
     border: solid;
@@ -5,25 +10,25 @@
     width:90%;
 }
 
-#carouselFilmes{
+.carouselFilmes{
     display: flex !important;
     flex-wrap: wrap;
     }
 
-#foto{
+.foto{
     height: 463px;
-    width: 797px;
+    width: 70%;
 }
-#foto img{
+.foto img{
 height: 100%;
 width: 100%;
 object-fit: cover;
 }
 
-
-
-.foto {
-    height: 463px;
-    width: 797px;
+#filmeInfo{
+    border: solid;
+    border-color: #41AF62;
+    width:30%;
+    background-color: #41AF62;
 }
 
