--- a/assets/css/cadastrarUsuario.css
+++ b/assets/css/cadastrarUsuario.css
@@ -1,13 +1,67 @@
 body{
     box-sizing: border-box;
-    border: 0;
-    background-color: black;
+    background-image: url(../img/bg/clipartBg1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     
 }
-.container{
-    max-width: 100%;
-    margin-top: 5rem;
-    background-color: rgba(34, 34, 34, 0.904);
+.formContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
     color: white;
+}
 
+.btnCadastrar{
+    border: none;
+    margin-top: 2rem;
+    background-color: var(--greenBtn);
+    font-size: 1.3rem;
+    border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
+    color: white;
+    height: 40%;
+    width: 100%;
+}
+.btnCadastrar:hover{
+    background-color: var(--hoverGreen1);
+}
+footer {
+    background-color: var(--bgDark1);
+    text-align: center;
+}
+
+footer > p {
+    margin-top: 2.188rem;
+}
+
+footer ul {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    margin-bottom: 1.313rem;
+}
+
+footer ul a {
+    color: white;
+    text-decoration: none;
+}
+
+footer ul a:hover{
+    text-decoration: underline;
+    color: var(--greenBtn);
+    font-style: italic;
+}
+
+footer ul li:not(li:last-child) {
+    margin-right: 0.313rem;
+}
+
+footer ul p {
+    font-size: 0.813rem;
+    pointer-events: none;
+    margin-bottom: 0;
 }
