--- a/assets/css/equipe.css
+++ b/assets/css/equipe.css
@@ -8,6 +8,9 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-image: url(../img/bg/clipartBg1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 header nav > a:hover {
