--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -231,6 +231,7 @@ header nav > div button:hover {
     width: 100%;
     background-color: #262626;
 }
+    
 #accordionFlushExample {
     width: 940px !important;
     margin: 0 auto;
@@ -250,7 +251,27 @@ header nav > div button:hover {
 .accordion-button {
     background-color: #262626;
     color: white;
-    font-size: 18px; 
+    font-size: 18px;
+}
+
+.accordion-button:hover{
+    color: var(--greenBtn);
+    background-color: black;
+}
+
+.accordion-button:active{
+    color: var(--hoverGreen1);
+    background-color: black;
+}
+.accordion-button:not(.collapsed){
+    background-color: var(--greenBtn);
+    color: black;
+    border:none !important;
+}
+
+.accordion-button:focus{
+    border: solid;
+    box-shadow: var(--hoverGreen1);
 }
 
 /*@media (max-width: 900px){
@@ -269,3 +290,53 @@ header nav > div button:hover {
 /*
 ================= FOOTER =================
 */
+
+.footer a{
+    text-decoration: none;
+    color: white;
+}
+
+.footer a:hover{
+    color: var(--hoverGreen1);
+}
+
+footer .btnCadastrar{
+    border: none;
+    background-color: var(--greenBtn);
+    font-size: 1.5rem;
+    border-radius: 0 0 0.313rem 0.313rem;
+    color: white;
+    height: 40%;
+}
+
+footer .btnCadastrar:hover{
+    background-color: var(--hoverGreen1);
+}
+
+footer .formCadastrar {
+    border-radius: 0.313rem 0.313rem 0 0;
+    font-size: 1.5rem;
+    color: var(--greenBtn) !important;
+    height: 60%;
+}
+
+footer .formCadastrar::placeholder {
+    color: var(--greenBtn) !important;
+    text-align: center;
+}
+
+footer .footerTitle{
+    text-align: center;
+    margin-top: 70px;
+    margin-bottom: 50px;
+}
+
+footer .form{
+    height: 90%;
+    margin-left: 0.5rem;
+}
+
+footer .form div {
+    height: 100%;
+    width: 22rem;
+}
