--- a/assets/css/equipe.css
+++ b/assets/css/equipe.css
@@ -44,10 +44,14 @@ header nav > div {
 }
  
 .our-team{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     border-radius: 15px;
     text-align: center;
     padding: 20px 15px 30px;
     background: #000000;  /* mudei de branco pra preto */
+    min-height: 390px;
 
 }
 .our-team .pic{
