--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -34,23 +34,34 @@ object-fit: cover;
 
 h2{
 text-align: center;
+padding: 10px;
 }
 
 h3{
-    text-align: center;
+    /* text-align: center; */
+    padding:  20px;
+}
+
+P{
+    margin: 0 auto;
 }
 
 .botao{
     display: flex;
     justify-content: center;
+    align-items: flex-end;
 }
 
 button{
-    width: 62%;
+    width: 70%;
     border: none;
     background-color: white;
     font-size: 2rem;
     border-radius: 0 0.313rem 0.313rem 0;
     color: #41AF62;
-    border-radius: 20px;
+    border-radius: 32px;
+    
 }
+
+
+
