--- a/assets/css/pesquisaFilmes.css
+++ b/assets/css/pesquisaFilmes.css
@@ -1,6 +1,7 @@
+
+
 body{
     background-image: url(../img/bg/clipartBg.png);
-    
 }
 
 
@@ -56,4 +57,48 @@ button{
 
 li {
     margin: 15px;
+}
+
+footer {
+    
+}
+
+footer > p {
+    margin-top: 2.188rem;
+}
+
+footer ul {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    list-style: none;
+    padding:0;
+    margin-bottom: 1.313rem;
+}
+
+footer ul a {
+    color: white;
+    text-decoration: none;
+}
+
+footer ul a:hover{
+    text-decoration: underline;
+    color: var(--greenBtn);
+    font-style: italic;
+}
+
+footer ul li:not(li:last-child) {
+    margin-right: 0.313rem;
+}
+
+footer ul p {
+    font-size: 0.813rem;
+    pointer-events: none;
+    margin-bottom: 0;
+}
+
+#footer{
+    background-color: var(--bgDark1);
+    text-align: center;
+    padding: 1px;
 }
