--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 *, *::after, *::before {
     margin: 0;
@@ -43,6 +44,10 @@ header nav {
     align-items: center;
     height: 83px;
     padding: 0 1.438rem;
+}
+
+header nav > a {
+    font-family: 'Bebas Neue', cursive;
 }
 
 header nav > a {
