--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -1,19 +1,20 @@
-H1{
+#filmesMaisVistos > h2{
     text-align: center;
-    margin:50px;
+    margin: 50px 0 0;
+    font-size: 3.125rem;
+    padding: 0;
 }
 
 #carouselExampleControls{
     max-width: 1211px;
-    border: solid;
-    margin:  60px auto;
+    margin: 60px auto;
     width:90%;
 }
 
 .carouselFilmes{
     display: flex !important;
     flex-wrap: wrap;
-    }
+}
 
 .foto{
     height: 463px;
@@ -25,43 +26,57 @@ width: 100%;
 object-fit: cover;
 }
 
-#filmeInfo{
-    border: solid;
-    border-color: #41AF62;
+#filmesMaisVistos #filmeInfo{
+    display: flex;
+    flex-direction: column;
+
     width:30%;
+    padding: 0 1.25rem;
     background-color: #41AF62;
 }
 
-h2{
-text-align: center;
-padding: 10px;
+#filmesMaisVistos #filmeInfo h2{
+    font-size: 1.938rem;
+    text-align: center;
+    margin: 1.625rem 0 0 ;
 }
 
-h3{
-    /* text-align: center; */
-    padding:  20px;
+#filmesMaisVistos #filmeInfo h3{
+    font-size: 1.5rem;
+    margin: 2.313rem 0 0;
 }
 
-P{
-    margin: 0 auto;
+#filmesMaisVistos #filmeInfo p{
+    margin: 1.375rem 0 0;
+    line-height: 1.7;
 }
 
-.botao{
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-}
-
-button{
-    width: 70%;
+#filmesMaisVistos .carousel-item button{
     border: none;
     background-color: white;
-    font-size: 2rem;
-    border-radius: 0 0.313rem 0.313rem 0;
-    color: #41AF62;
-    border-radius: 32px;
+    font-size: 1.063rem;
     
+    border-radius: 0 0.313rem 0.313rem 0;
+    color: var(--greenBtn);
+
+    border-radius: 32px;
+    margin: 3.5rem auto 0.313rem;
+    padding: 0.25rem 1.25rem;  
 }
 
+#filmesMaisVistos .carousel-item button:hover {
+    background-color: black;
+}
 
+/* .carousel-control-prev {
+    left: 63px;
+}
+
+.carousel-control-next {
+    right: 63px;
+}
+
+.carousel-control-next, .carousel-control-prev {
+    width: 3%;
+} */
 
