--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -73,9 +73,9 @@
     text-align: center;
 }
 
-.modal-body #filmeInfoModal #filmeNotaModal div:not(div:last-child) {
+/* .modal-body #filmeInfoModal #filmeNotaModal div:not(div:last-child) {
     margin-right: 1.063rem;
-}
+} */
 
 .modal-body #filmeInfoModal #filmeNotaModal p {
     margin-bottom: 0;
