--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -5,24 +5,16 @@
 */
 
 header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 3;
     width: 100%;
-    /* height: 83px; */
-    /* background-image: linear-gradient(to top, rgb(0 0 0 / 0%), rgb(0 0 0 / 56%)); */
 }
 
 header nav > a {
     font-family: 'Bebas Neue', cursive;
 }
 
-
 header nav > a:hover {
     color: white;
     background-color: var(--greenBtn);
-    /* text-decoration: underline; */
 }
 
 header nav > a:active {
@@ -35,14 +27,12 @@ header nav > a:active {
 
 header nav > div {
     display: flex;
-    /* align-items: center; */
 }
 
 header nav > div #searchBtn {
     height: 49px;
     width: 79px;
 
-    /* padding: 0.281rem 0.5rem; */
     margin-right: 1.438rem;
     border-radius: 5px;
     text-align: center;
@@ -71,7 +61,14 @@ header nav > div button:hover {
     background-color: var(--hoverGreen1);
 }
 
-
+@media (min-width: 1024px) {
+    header {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 3;
+    }
+} 
 
 
 /*
@@ -83,8 +80,6 @@ header nav > div button:hover {
 
 
 #content #intro {
-    width: 100%;
-    height: 100vh;
     background-image: url(../img/bg/bg-filme5.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -221,7 +216,12 @@ header nav > div button:hover {
     }
 }
 
-
+@media (min-width: 1024px) {
+    #content #intro {
+        width: 100%;
+        height: 100vh;
+    }
+}
 
 /*=== FILMES MAIS VISTOS ===*/
 
@@ -245,13 +245,8 @@ header nav > div button:hover {
 
 .accordion-item {
     background-color: #262626;
-    /*margin-bottom: 10px; */
     
 }
-
-/*.accordion-header {
-    text-transform: uppercase;
-}*/
 
 .accordion-button {
     background-color: #262626;
@@ -279,22 +274,16 @@ header nav > div button:hover {
     box-shadow: var(--hoverGreen1);
 }
 
-/*@media (max-width: 900px){
-    #accordionFlushExample {
-        max-width: 300px;
-    }
-} */
-
-/*.accordion-body {
-    font-size: 14px;
-}*/
-
 
 
 
 /*
 ================= FOOTER =================
 */
+
+footer {
+    background-color: var(--bgDark1);
+}
 
 .footer a{
     text-decoration: none;
@@ -311,7 +300,7 @@ footer .btnCadastrar{
     font-size: 1.5rem;
     border-radius: 0 0 0.313rem 0.313rem;
     color: white;
-    height: 40%;
+    /* height: 40%; */
 }
 
 footer .btnCadastrar:hover{
@@ -346,3 +335,29 @@ footer .form div {
     height: 100%;
     width: 22rem;
 }
+
+
+
+footer .container .row:last-child {
+ justify-content: space-around;       
+}
+
+@media(max-width: 768px) {
+    /* footer .container .row .offset-3, footer .container .row .offset-1 {
+        margin-right: 0 !important;
+        margin-left: 0 !important;
+    } */
+
+    footer .form {
+        margin-left: 0 !important;
+    }
+
+    footer .form div {
+        width: 100% !important;
+    }
+
+    footer .container .row:last-child .col-md-2 >p {
+        margin-top: 28px;
+    }
+}
+
