--- a/assets/css/pesquisaFilmes.css
+++ b/assets/css/pesquisaFilmes.css
@@ -1,10 +1,14 @@
-
+html, body {
+    width: 100%;
+    height: 100%;
+}
 
 body{
     background-image: url(../img/bg/clipartBg.png);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
-
-
 
 header nav > a:hover {
     color: white;
@@ -59,14 +63,13 @@ li {
     margin: 15px;
 }
 
-<<<<<<< HEAD
-    
+/*
+================= FOOTER =================
+*/
 
-.esconde {
-    display: none;
-=======
 footer {
-    
+    background-color: var(--bgDark1);
+    text-align: center;
 }
 
 footer > p {
@@ -78,7 +81,7 @@ footer ul {
     justify-content: center;
     flex-wrap: wrap;
     list-style: none;
-    padding:0;
+    padding: 0;
     margin-bottom: 1.313rem;
 }
 
@@ -101,11 +104,4 @@ footer ul p {
     font-size: 0.813rem;
     pointer-events: none;
     margin-bottom: 0;
-}
-
-#footer{
-    background-color: var(--bgDark1);
-    text-align: center;
-    padding: 1px;
->>>>>>> main
 }
