--- a/assets/css/pesquisaFilmes.css
+++ b/assets/css/pesquisaFilmes.css
@@ -5,9 +5,9 @@ html, body {
 
 body{
     background-image: url(../img/bg/clipartBg.png);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
 }
 
 header nav > a:hover {
@@ -17,9 +17,7 @@ header nav > a:hover {
 
 
 
-#content{
-    padding: 9%;
-}
+
 h1{
     text-align: center;
     margin:25px auto;
@@ -82,7 +80,7 @@ footer ul {
     flex-wrap: wrap;
     list-style: none;
     padding: 0;
-    margin-bottom: 1.313rem;
+    /* margin-bottom: 1.313rem; */
 }
 
 footer ul a {
